# frontend-chatbot

./: app.py  main.py  pyproject.toml
static/css/: style.css
static/js/: main.js  particles-config.js
templates/: index.html
